/***********************************************************************
 X3 ChangeLog

2006-05-25  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.help: Added newby tip to authserv registration 
	help (about < and >)

	* src/mod-track.c: Fixed crash when a server kicks a person (tried to
	deref null kicker)

2006-05-23  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Set SWHOIS's when a user auths.

	* src/hosthiding.c: Fixed a segfault.

	* src/nickserv.c: Epithets now use SWHOIS.

	* src/proto.h: Declerations for irc_swhois.

	* src/proto-p10.c: Handle SWHOIS's.

2006-05-23  Neil Spierling  <sirvulcan@gmail.com>

	* src/hash.h: Bumped SOCKIPLEN

	* src/hosthiding.c: Functions to crypt IPv6 addresses.

	* src/hosthiding.h: IPv6 function declerations.

	* src/proto-p10.c: If the users ip address is IPv6 then crypt it
	with the ipv6 crypting function.

2006-05-23  Neil Spierling  <sirvulcan@gmail.com>

	* src/hash.h: Bits needed for other type of host hiding.

	* src/hosthiding.h: Nefarious style 2 host hiding declerations.

	* src/hosthiding.c: This will generated crypted style 2 Nefarious
	hidden hosts and ips. Currently they are just displayed in O3
	WHOIS. Im yet to expand this.

	* src/Makefile.am: Added hosthiding.c and hosthiding.h.

	* src/Makefile.in: Regenerated.

	* src/opserv.c: Display crypted hosts n ips in WHOIS.

	* src/proto-p10.c: Generate crypted hosts n ips on everyone and
	save them in user->crypthost user->cryptip.

2006-05-22  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Set ignores when you authenticate.

	* src/nickserv.c: Added ADDIGNORE, OADDIGNORE, DELIGNORE ODELIGNORE.
	Used for centralized silence list management. Currently set ignores
	can be viewed in ACCOUNTINFO for via ircd SILENCE.

	* src/nickserv.h: Declerations.

	* src/nickserv.help: Added help entries for above commands.

	* src/proto.h: Declerations.

	* src/proto-p10.c: Functions to handle silences

2006-05-18  Alex Schumann  <rubin@afternet.org>